# cMusic

./: .gitignore  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml  requirements.txt  setup.py
cmusic/: __init__.py  __main__.py  bg_threads.py  cmusic  cmusic.py  constants.py  indexlib.py  main.py
non_poetry/: requirements.txt  setup.py
